proj1/tests/error/class_and_string.py
def classDefiner():
	class Defined:
		definition = 'frend